--- a/style.css
+++ b/style.css
@@ -1,3 +1,54 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+@font-face {
+    font-family: 'Melforine';
+    src: url("fonts/Melforine.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+header {
+    width: 100%;
+    height: 300px;
+    background: #fff;
+    border-bottom: 3px solid black;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    font-size: 150px;
+    font-family: 'Melforine', serif;
+    color: black;
+    white-space: nowrap;
+}
+
+/* Styling for button */
+.instructions {
+    position: absolute;
+    top: 230px;
+    left: 90%;
+    z-index: 10;
+}
+
+.instructions button {
+    border: none;
+    background: none;
+}
+
+/* Styling for popup box */
 .popup {
     width: 600px;
     height: 800px;
