--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ header {
     background: none;
 }
 
+.closeInstructionBtn {
+    top: 20px;
+    left: 90%;
+    z-index: 10;
+}
+
 /* Styling for popup box */
 .popup {
     width: 600px;
@@ -73,8 +79,27 @@ header {
     color: #fff;
 }
 
+.instructionPopup {
+    width: 600px;
+    height: 800px;
+    background: #fff;
+    border: 3px solid black;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+
 .open-popup {
     visibility: visible;
-    top: 50%;
+    top: 5px;
     transform: translate(-50%, 50%) scale(1);
 }
