--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Gelineos';
+    src: url('fonts/Gelineos.otf') format("opentype");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 header {
     width: 100%;
     height: 300px;
@@ -64,8 +72,9 @@ img {
 /* Styling for popup box */
 .popup {
     width: 600px;
-    height: 800px;
+    height: 400px;
     background: #fff;
+    border: 2px solid black;
     border-radius: 6px;
     position: absolute;
     top: 0;
@@ -73,24 +82,45 @@ img {
     transform: translate(-50%, -50%) scale(0.1);
     text-align: center;
     padding: 0 30px 30px;
-    color: #333;
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
 }
 
 .popup button {
-    width: 100px;
-    margin-top: 50px;
-    padding: 10px 0;
-    background: #6fd649;
+    position: absolute;
+    top: 0px;
+    left: 90%;
+    padding: 5px 0;
+    background: none;
+    border: none;
     color: #fff;
+}
+
+.popup svg {
+    padding: 20px 0;
+}
+
+.popup h2 {
+    font-size: 75px;
+    font-family: 'Melforine', serif;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    text-decoration: underline;
+}
+
+.popup p {
+    font-size: 35px;
+    font-family: "Gelineos", serif;
+    color: black;
+    line-height: 2.0;
 }
 
 .instructionPopup {
     width: 700px;
     height: 400px;
     background: #fff;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 6px;
     position: absolute;
     top: 0;
@@ -98,7 +128,6 @@ img {
     transform: translate(-50%, -50%) scale(0.1);
     text-align: center;
     padding: 0 30px 30px;
-    color: #333;
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
 }
@@ -118,14 +147,15 @@ img {
     font-family: 'Melforine', serif;
     color: black;
     margin-top: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-decoration: underline;
 }
 
 .instructionPopup p {
-    font-size: 20px;
-    line-height: 1.6;
-
+    font-size: 23px;
+    font-family: "Gelineos", serif;
+    color: black;
+    line-height: 2.0;
 }
 
 .open-popup {
